# osa_cli_releases

./: README.rst  setup.cfg  tox.ini
osa_cli_releases/: cli.py  click.py  releasing.py
tests/: test_include.py  test_releasing.py
