[metadata]
name = osa_cli_releases
version = 0.2
description = Release toolkit for OpenStack-Ansible
long_description = file: README.rst
author = Jean-Philippe Evrard
author_email = jean-philippe@evrard.me
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages = osa_cli_releases
python_requires = >=3.5
install_requires =
    requests
    requirements-parser
    prettytable
    pyyaml
    ruamel.yaml
    setuptools>=30.3
    Jinja2

[options.entry_points]
console_scripts =
    osa-releases = osa_cli_releases.cli:main
